Change intro, consent and tooltip text in create ticket activity

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -63,8 +63,8 @@
     "3g-proof-status": "Status",
     "3g-proof-proof-from": "Von",
     "3g-proof-birthdate": "Geburtsdatum",
-    "trust-and-save-1": "Ich stimme zu, meinen 3-G-Nachweis zu importieren und diese Daten auf meinem Gerät zu speichern.",
-    "trust-and-save-2": "Wenn Sie diese Option wählen, werden Ihre Daten nur auf diesem Gerät und nur für diese Webseite gespeichert.",
+    "trust-and-save-1": "Meinen 3-G-Nachweis importieren und auf diesem Gerät speichern.",
+    "trust-and-save-2": "Ihre Daten werden ausschließlich auf diesem Gerät gespeichert und verarbeitet. Es findet keine automatische Übertragung von importierten 3-G-Nachweisen zwischen Geräten statt. 3-G-Nachweise, die auf anderen Geräten importiert wurden, sind nur auf diesen verfügbar.",
     "create-new-ticket": "Neues Ticket anfordern",
     "request-ticket-button-text": "Ticket anfordern",
     "confirm-not-checked-title": "Zustimmung nicht erteilt!",
