--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -63,8 +63,8 @@
     "3g-proof-status": "Status",
     "3g-proof-proof-from": "From",
     "3g-proof-birthdate": "Birthdate",
-    "trust-and-save-1": "I agree to import my 3-G evidence and store this data on my device.",
-    "trust-and-save-2": "If you select this option, your data will be stored only on this device and only for this website.",
+    "trust-and-save-1": "I agree to import my 3-G-evidence and store this data on my device.",
+    "trust-and-save-2": "Your data is stored and processed exclusively on this device. There is no automatic transfer of imported 3-G-evidence between devices. 3-G-evidence imported on other devices is only available on these devices.",
     "create-new-ticket": "Request new ticket",
     "request-ticket-button-text": "Request ticket",
     "confirm-not-checked-title": "Consent not given!",
