Clean translation files up

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -1,29 +1,10 @@
 {
   "acquire-ticket": {
-    "title": "Ticket für Ort ausstellen",
-    "description": "Hier können Sie sich ein Ticket für einen Ort an der TU Graz ausstellen lassen.",
-    "activation-link": "3-G-Nachweis aktivieren",
-    "additional-information": "Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Wenn Sie Ihren 3-G-Nachweis aktiviert haben, können Sie sich damit direkt an einem Ort an der TU Graz für einen bestimmten Zeitraum anmelden. Falls Sie noch keinen 3-G-Nachweis aktiviert haben, verwenden Sie bitte den Menüpunkt ",
-    "additional-information-2": " um einen Nachweis zu aktivieren. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G-Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
-    "no-proof-found-message": "Es wurde kein gültiger 3-G-Nachweis gefunden. Bitte aktivieren Sie einen gültigen 3-G-Nachweis unter dem Menüpunkt ",
-    "valid-proof-found-message": "Es wurde ein gültiger 3-G-Nachweis gefunden.",
-    "place-select-title": "Ort auswählen",
-    "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Ort bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
-    "confirm-button-text": "Ticket erstellen",
-    "refresh-button-text": "Ticket verlängern",
-    "no-proof-continue": "Ticket ohne 3-G-Nachweis erstellen",
-    "create-ticket-success-title": "Ticket erfolgreich erstellt!",
-    "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
     "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
-    "check-in-link-description": "Möchten Sie auch das Contact Tracing der TU Graz unterstützen?",
-    "check-in-link-text": "TU Graz check-in",
-    "manage-tickets-link": "Aktive Tickets anzeigen",
-    "manage-tickets-text": "Sie können Ihre aktiven Tickets verwalten unter: "
+    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten."
   },
   "acquire-3g-ticket": {
     "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) hochladen indem Sie den entsprechenden QR-Code scannen oder ein vorhandenes PDF oder Bild mit QR-Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G-Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
-    "invalid-qr-code": "Der QR-Code enthält keinen gültigen 3-G-Nachweis.",
     "qr-button-text": "QR-Code scannen",
     "manually-button-text": "Datei hochladen",
     "filepicker-button-title": "PDF oder Bild auswählen",
@@ -51,7 +32,6 @@
     "invalid-document": "Der 3-G-Nachweis ist aktuell nicht für den Eintritt gültig.",
     "invalid-document-prefix": "Technische Details: ",
     "no-qr-code": "Kein QR-Code gefunden!",
-    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR-Code gefunden.",
     "invalid-title": "Validierung fehlgeschlagen!",
     "invalid-body": "Bitte versuchen Sie es mit einem anderen Dokument noch einmal.",
     "invalid-qr-body": "Der QR-Code enthält keinen gültigen 3-G-Nachweis.",
@@ -74,23 +54,18 @@
   },
   "show-active-tickets": {
     "entry-ticket": "Eintrittsticket",
-    "title": "Zeige alle aktiven Tickets",
-    "description": "Hier können Sie die Liste aller gültigen Tickets sehen. Diese müssen Sie im Falle einer manuellen Kontrolle vorweisen.",
-    "no-tickets-message": "Sie besitzen derzeit keine gültigen Tickets!",
+    "description": "Hier können Sie die Liste aller Tickets sehen. Diese müssen Sie im Falle einer manuellen Kontrolle vorweisen.",
+    "no-tickets-message": "Sie besitzen derzeit keine Tickets!",
     "valid-until-message-1": "Gültig für: ",
     "valid-until-message-2": "{{hours}} Stunde(n)",
     "valid-until-message-3": "{{minutes}} Minute(n)",
     "delete-btn-text": "Löschen",
     "show-btn-text": "Zeigen",
-    "refresh-btn-text": "Verlängern",
     "show-ticket-title": "Ticket: ",
-    "refresh-ticket-success-title": "Ticket erfolgreich verlängert!",
-    "refresh-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich verlängert.",
     "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
     "delete-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich gelöscht.",
     "other-error-title": "Fehler!",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
-    "preselected-place": "Ort",
     "3g-evidence": "3-G-Nachweis: Grüner Pass gefunden",
     "no-3g-evidence": "Keinen 3-G-Nachweis gefunden",
     "self-test-found": "3-G-Nachweis: Selbsttest gefunden",
