--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,29 +1,10 @@
 {
   "acquire-ticket": {
-    "title": "Acquire ticket for a place",
-    "description": "Here you can acquire a ticket for a location at TU Graz.",
-    "activation-link": "activate 3-G-evidence",
-    "additional-information": "This is needed to be allowed to enter a location at TU Graz. If you have activated a 3-G-evidence, you can use it to log in directly at a location at TU Graz for a certain period of time. If you have not activated a 3-G-evidence yet, please use the menu item ",
-    "additional-information-2": " to activate a evidence. Alternatively, you can manually confirm that you are carrying 3-G-evidence and be able to prove it in case of a manual control.",
-    "no-proof-found-message": "No valid 3-G-evidence was found. Please activate a valid 3-G detection under the menu item ",
-    "valid-proof-found-message": "A valid 3-G-evidence was found. Please select a location to create a ticket.",
-    "place-select-title": "Select a place",
-    "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this place and can present such evidence in the event of a manual inspection.",
-    "confirm-button-text": "Create a Ticket",
-    "refresh-button-text": "Refresh Ticket",
-    "no-proof-continue": "Acquire ticket without 3-G-evidence",
-    "create-ticket-success-title": "Ticket successfully created!",
-    "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
     "other-error-title": "Error!",
-    "other-error-body": "An unknown error has occurred.",
-    "check-in-link-description": "Do you want to support contact tracing at TU Graz?",
-    "check-in-link-text": "TU Graz check-in",
-    "manage-tickets-link": "Show active tickets",
-    "manage-tickets-text": "You can manage your active tickets at: "
+    "other-error-body": "An unknown error has occurred."
   },
   "acquire-3g-ticket": {
     "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location for a certain period of time. This is needed to be allowed to enter a location. Alternatively, you can manually confirm that you are carrying 3-G-evidence and be able to prove it in case of a manual control.",
-    "invalid-qr-code": "No valid 3-G-evidence found.",
     "qr-button-text": "Scan QR code",
     "manually-button-text": "Upload File",
     "filepicker-button-title": "Choose File",
@@ -51,7 +32,6 @@
     "invalid-document": "3-G-evidence is currently not valid.",
     "invalid-document-prefix": "Technical details: ",
     "no-qr-code": "No QR code found!",
-    "no-qr-code-body": "No QR code was found in the uploaded document.",
     "invalid-title": "Validation failed!",
     "invalid-body": "Please try again with another document.",
     "invalid-qr-body": "The QR code does not contain a valid 3-G-evidence.",
@@ -74,23 +54,18 @@
   },
   "show-active-tickets": {
     "entry-ticket": "Entry Ticket",
-    "title": "Show all active tickets",
-    "description": "Here you can see the list of all valid tickets. You have to show them in case of a manual control.",
-    "no-tickets-message": "You do not have any valid tickets!",
+    "description": "Here you can see the list of all tickets. You have to show them in case of a manual control.",
+    "no-tickets-message": "You do not have any tickets!",
     "valid-until-message-1": "Valid for: ",
     "valid-until-message-2": "{{hours}} hour(s)",
     "valid-until-message-3": "{{minutes}} minute(s)",
     "delete-btn-text": "Delete",
     "show-btn-text": "Show",
-    "refresh-btn-text": "Refresh",
     "show-ticket-title": "Ticket: ",
-    "refresh-ticket-success-title": "Ticket successfully refreshed!",
-    "refresh-ticket-success-body": "The ticket for {{place}} was successfully refreshed.",
     "delete-ticket-success-title": "Ticket successfully deleted!",
     "delete-ticket-success-body": "The ticket for {{place}} was successfully deleted.",
     "other-error-title": "Error!",
     "other-error-body": "An unknown error occurred.",
-    "preselected-place": "Place",
     "3g-evidence": "3-G-evidence: Found Green Pass",
     "no-3g-evidence": "No 3-G-evidence found",
     "self-test-found": "3-G-evidence: Self-test found",
