Return translated error messages for the hcert validation if possible.
While they are mostly of technical nature we already have some of them translated,
so just use them.

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -83,5 +83,9 @@
   "loading-message": "Lädt...",
   "file-sink": {
     "modal-close": "Schließen"
+  },
+  "hcert": {
+    "cert-not-valid-error": "Erfüllt nicht die folgenden Regeln: {{error}}",
+    "cert-validation-failed-error": "Validierung fehlgeschlagen: {{error}}"
   }
 }
