Change text in reference ticket

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -63,7 +63,7 @@
     "other-error-title": "Fehler!",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "3g-evidence": "3-G-Nachweis: Grüner Pass gefunden",
-    "no-3g-evidence": "Keinen 3-G-Nachweis gefunden",
+    "no-3g-evidence": "Kein 3-G-Nachweis gefunden",
     "self-test-found": "3-G-Nachweis: Selbsttest gefunden",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "self-test": "Selbsttest",
