Add translation show ticket

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -73,7 +73,19 @@
     "delete-ticket-notfound-title": "Ticket nicht gefunden!",
     "delete-ticket-notfound-body": "Es wurde keine aktives Ticket: {{place}} gefunden. Das Ticket ist warscheinlich schon abgelaufen oder gelöscht.",
     "status": "Status: ",
-    "loading-message-ticket": "Ticket wird geladen ..."
+    "loading-message-ticket": "Ticket wird geladen ...",
+    "status-active": "akWie Sie die Dauer der Speicherung des importierten 3-G-Nachweises verlängern erfahren Sie tiv",
+    "3-g-evidence": "3-G-Nachweis",
+    "3-g-evidence-green-pass-valid": "grüner Pass auf diesem Gerät importiert und gültig",
+    "3-g-evidence-selftest": "Selbsttest auf diesem Gerät importiert, manuelle Kontrolle notwendig",
+    "3-g-evidence-internal-test": "Universitäts interner Test auf diesem Gerät importiert und gültig",
+    "status-inactive": "inaktiv",
+    "3-g-evidence-invalid": "kein Gültiger 3-G-Nachweis auf diesem Gerät gefunden",
+    "3-g-evidence-invalid-text": "Eventuell haben Sie Ihren Nachweis auf einem anderen Gerät importiert, der Nachweis ist nicht mehr gültig oder die Applikation wurde für einen längeren Zeitraum nicht genutzt.",
+    "3-g-evidence-maximize-saving": "Wie Sie die Dauer der Speicherung des importierten 3-G-Nachweises verlängern erfahren Sie ",
+    "3-g-evidence-maximize-saving-here": "hier",
+    "3-g-evidence-maximize-saving-title": "Maximierung der Speicherdauer des importierten 3-G-Nachweises",
+    "new-ticket": "Neues Ticket anfordern"
   },
   "validity-tooltip": "Nach den ",
   "validity-tooltip-2": "aktuellen Bestimmungen",
