--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -73,7 +73,19 @@
     "delete-ticket-notfound-title": "Ticket not found!",
     "delete-ticket-notfound-body": "No active ticket: {{place}} was found. The ticket has probably already expired or deleted.",
     "status": "Status: ",
-    "loading-message-ticket": "Loading the ticket ..."
+    "loading-message-ticket": "Loading the ticket ...",
+    "status-active": "active",
+    "3-g-evidence": "3-G-evidence",
+    "3-g-evidence-green-pass-valid": "Green passport imported and valid on this device",
+    "3-g-evidence-selftest": "Self-test imported on this device, manual control necessary",
+    "3-g-evidence-internal-test": "University internal test imported on this device and valid",
+    "status-inactive": "inactive",
+    "3-g-evidence-invalid": "No valid 3-G evidence found on this device",
+    "3-g-evidence-invalid-text": "You may have imported your evidence on another device, the evidence is no longer valid or the application has not been used for a longer period of time.",
+    "3-g-evidence-maximize-saving": "You can find out how to maximize the storage time of the imported 3-G evidence",
+    "3-g-evidence-maximize-saving-title": "Maximize the storage time of the imported 3-G evidence",
+    "3-g-evidence-maximize-saving-here": "here",
+    "new-ticket": "Request a new ticket"
   },
   "validity-tooltip": "According to the ",
   "validity-tooltip-2": "current regulations",
