--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -85,7 +85,8 @@
     "3-g-evidence-maximize-saving": "You can find out how to maximize the storage time of the imported 3-G evidence",
     "3-g-evidence-maximize-saving-title": "Maximize the storage time of the imported 3-G evidence",
     "3-g-evidence-maximize-saving-here": "here",
-    "new-ticket": "Request a new ticket"
+    "new-ticket": "Request a new ticket",
+    "internal-test-found": "found university internal test"
   },
   "show-reference-ticket": {
     "active": "activ",
