--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -50,7 +50,7 @@
   },
   "show-active-tickets": {
     "entry-ticket": "Eintrittsticket",
-    "description": "Hier können Sie die Liste aller Tickets sehen. Diese müssen Sie im Falle einer manuellen Kontrolle vorweisen.",
+    "description": "Hier können Sie das aktuell gültige Referenzticket zum Zweck der Kontrolle einsehen. Dieses Ticket berechtigt nicht zum Eintritt an die Universität.",
     "no-tickets-message": "Sie besitzen derzeit keine Tickets!",
     "valid-until-message-1": "Gültig für: ",
     "valid-until-message-2": "{{hours}} Stunde(n)",
