Add several performance changes and fix typos

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -5,7 +5,7 @@
     "manually-button-text": "Datei hochladen",
     "filepicker-button-title": "PDF oder Bild auswählen",
     "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
-    "manual-uploading-message": "Suche nach validem QR-Code...",
+    "manual-uploading-message": "Suche nach gültigem QR-Code...",
     "place-select-title": "Ticket für",
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Ort bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
