--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -81,7 +81,7 @@
     "status-inactive": "inaktiv",
     "3-g-evidence-invalid": "kein Gültiger 3-G-Nachweis auf diesem Gerät gefunden",
     "3-g-evidence-invalid-text": "Eventuell haben Sie Ihren Nachweis auf einem anderen Gerät importiert, der Nachweis ist nicht mehr gültig oder die Applikation wurde für einen längeren Zeitraum nicht genutzt.",
-    "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm hinzu, um die Speicherdauer des 3-G-Nachweises zu maximieren. Wie das geht erfahren Sie ",
+    "3-g-evidence-maximize-saving": "Fügen Sie die App auf dem Startbildschirm hinzu, um die Speicherdauer des 3-G-Nachweises zu maximieren.",
     "3-g-evidence-maximize-saving-here": "hier",
     "3-g-evidence-maximize-saving-title": "FAQs",
     "new-ticket": "Neues Ticket anfordern",
