--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -93,7 +93,9 @@
     "place-name": "Ort",
     "active": "aktiv",
     "inactive": "inaktiv",
-    "description": "Hier wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist hängt vom lokal importierten 3-G-Nachweis ab."
+    "description": "Hier wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist hängt vom lokal importierten 3-G-Nachweis ab.",
+    "information-container-headline": "Informationen zum 3-G-Nachweis",
+    "information-container-body": "Ist ein gültiger grüner Pass auf dem Gerät importiert, wird dessen QR-Code angezeigt das Ticket in Farbe dargestellt."
   },
   "validity-tooltip": "Nach den ",
   "validity-tooltip-2": "aktuellen Bestimmungen",
