--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -11,13 +11,13 @@
     "confirm-button-text": "Ticket erstellen",
     "create-ticket": "Ticket erstellen",
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
-    "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
+    "create-ticket-success-body": "Das angeforderte Eintrittsticket für den Ort {{place}} wurde erfolgreich erstellt.",
     "check-in-link-description": "Denken Sie auch an die Möglichkeit am Contact Tracing teilzunehmen!",
-    "manage-tickets-link": "Aktive Tickets anzeigen",
+    "manage-tickets-link": "Tickets anzeigen",
     "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
     "skip-button-text": "Überspringen",
-    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
-    "confirm-checkbox-no-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
+    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben, und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
+    "confirm-checkbox-no-cert-text": "Ich bestätige, dass mein Nachweis für die Dauer meines Aufenthalts gültig ist, sowie die Richtigkeit meiner Angaben, und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "3g-proof-label-text": "3-G-Nachweis importieren",
     "remove-proof": "Nachweis entfernen",
     "found-valid-3g-preCheck": "Es wurden lokal gespeicherte gültige 3-G-Informationen gefunden.",
@@ -25,7 +25,7 @@
     "valid-till": "gültig bis ",
     "found-valid-selftest-preCheck": "Es wurde ein lokal gespeicherter Selbsttest gefunden.",
     "found-valid-selftest": "Es wurde ein Selbsttest gefunden.",
-    "invalid-document": "Der 3-G-Nachweis ist aktuell nicht für den Eintritt gültig.",
+    "invalid-document": "Der 3-G-Nachweis ist aktuell nicht für den Eintritt an der {{place}} gültig.",
     "invalid-document-prefix": "Technische Details: ",
     "no-qr-code": "Kein QR-Code gefunden!",
     "invalid-title": "Validierung fehlgeschlagen!",
@@ -93,12 +93,11 @@
     "place-name": "Ort",
     "active": "aktiv",
     "inactive": "inaktiv",
-    "description": "Hier wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist hängt vom lokal importierten 3-G-Nachweis ab.",
+    "description": "Hier wird die Gültigkeit eines Eintrittstickets angezeigt. Ob ein Ticket aktiv oder inaktiv ist hängt von dem auf diesem Gerät importierten 3-G-Nachweis ab.",
     "information-container-headline": "Informationen zum 3-G-Nachweis",
     "information-container-body": "Ist ein gültiger grüner Pass auf dem Gerät importiert, wird dessen QR-Code angezeigt das Ticket in Farbe dargestellt."
   },
-  "validity-tooltip": "Nach den ",
-  "validity-tooltip-2": "aktuellen Bestimmungen",
+  "validity-tooltip": "Nach den aktuellen Bestimmungen der {{place}}. Die Gültigkeitsdauer wird bei einer Änderung der Bestimmungen automatisch aktualisiert.",
   "validity-tooltip-title": "Aktuelle Bestimmungen",
   "valid-till": "Voraussichtlich gültig bis ",
   "date-time": "{{clock}} Uhr am {{date}}",
