--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -11,9 +11,9 @@
     "confirm-button-text": "Create a Ticket",
     "create-ticket": "Create ticket",
     "create-ticket-success-title": "Ticket successfully created!",
-    "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
+    "create-ticket-success-body": "The acquired entrance ticket for {{place}} was successfully created.",
     "check-in-link-description": "Also consider using contact tracing!",
-    "manage-tickets-link": "Show active tickets",
+    "manage-tickets-link": "Show tickets",
     "manage-tickets-text": "Active tickets could be found. You can manage your active tickets at: ",
     "skip-button-text": "Skip",
     "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
@@ -25,7 +25,7 @@
     "found-valid-3g": "A valid 3-G-evidence was imported.",
     "found-valid-selftest-preCheck": "A locally saved self-test was found.",
     "found-valid-selftest": "A self-test was found.",
-    "invalid-document": "3-G-evidence is currently not valid.",
+    "invalid-document": "3-G-evidence is currently not valid for {{place}}.",
     "invalid-document-prefix": "Technical details: ",
     "no-qr-code": "No QR code found!",
     "invalid-title": "Validation failed!",
@@ -97,8 +97,7 @@
     "information-container-headline": "Information about 3-G evidence",
     "information-container-body": "If a valid health certitificate is available on this device then its QR-code is displayed and the ticked is shown in color."
   },
-  "validity-tooltip": "According to the ",
-  "validity-tooltip-2": "current regulations",
+  "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change.",
   "valid-till": "Probably valid until: ",
   "date-time": "{{clock}} on {{date}}",
   "error-login-message": "You need to be logged in to use this function!",
