--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -88,9 +88,9 @@
     "place-name": "Place",
     "active": "activ",
     "inactive": "inactiv",
-    "description": "The validity of the access test is displayed here. Depending on the available evidence the ticket is shown as active or inactive. The reference ticket does not entitle you to enter the university.",
+    "description": "At this point the validity of an entrance ticket is displayed. Depending on the available 3-G evidence the ticket is shown as active or inactive. The reference ticket does not entitle you to enter the university.",
     "information-container-headline": "Information about 3-G evidence",
-    "information-container-body": " If a valid health certitificate is available on this device then its QR-code is displayed and the ticked is shown in color. This QR-code can be checked with Green Check</a>. If a self-test was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white. This QR-code cannot be validated by this app, therefore its validation requires a QR-code scanner. If a valid test made by Teststraße of TU Graz is available on this device then the ticket is shown in color. The test has to be evaluated manually."
+    "information-container-body": " If a valid health certitificate is available on this device then its QR-code is displayed and the ticked is shown in color. This QR-code can be checked with Green Check</a>. If a self-test was issued by Land Steiermark or Land Kärnten is available on this device then its QR-code is displayed and the ticket is shown in black and white. This QR-code cannot be validated by this app, therefore its validation requires a QR-code scanner. If a valid test made by Teststraße of TU Graz is available on this device then the ticket is shown in color. Manual validation of this test can only be done with the original document."
   },
   "validity-tooltip": "According to the current regulations of {{place}}. The validity period is automatically updated when the regulations change.",
   "valid-till": "Probably valid until: ",
